--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -7,4 +7,26 @@
     height: 0.875rem;
     border-bottom: 1px dotted var(--gray-2);
   }
+
+  user-select: none;
+
+  .control {
+    width: 1.125rem;
+    text-align: center;
+    cursor: pointer;
+    color: var(--gray-2);
+  }
+
+  .number {
+    width: 1.125rem;
+    text-align: center;
+  }
+
+  .title {
+    padding: 0 0.375rem 0rem 0.375rem;
+  }
+
+  .number, .title {
+    color: var(--gray-2);
+  }
 }
