--- a/src/components/setup.css
+++ b/src/components/setup.css
@@ -2,5 +2,28 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.setup-content {
+  display: flex;
+  flex-direction: column;
   max-width: 520px;
+  width: 100%;
+
+  .form {
+    margin-top: 2.5rem;
+    margin-bottom: 1.125rem;
+    padding-left: 1.125rem;
+    padding-right: 1.125rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+
+    .actions {
+      margin-top: 1.125rem;
+    }
+  }
 }
