--- a/src/components/app.css
+++ b/src/components/app.css
@@ -37,6 +37,7 @@
   grid-template-columns: repeat(3, auto);
   padding-right: 1.25rem;
   padding-left: 1.25rem;
+  margin-top: 1.25rem;
 
   &>div {
     display: flex;
