--- a/src/components/app.css
+++ b/src/components/app.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: calc(100vw - 2.5rem);
-  height: calc(100vh - 2.5rem);
+  min-height: calc(100vh - 2.5rem);
   padding: 1.25rem;
 }
 
