--- a/src/components/cell.css
+++ b/src/components/cell.css
@@ -18,4 +18,11 @@
       line-height: 1.25rem;
     }
   }
+
+  .touch-header-title {
+    display: flex;
+    gap: 0.25rem;
+    cursor: pointer;
+  }
+
 }
